@@ -1,8 +1,7 @@
 #!/usr/local/bin/ruby -w
 
-$:.unshift(File.join(File.dirname(__FILE__), "..", "lib"))
+require "rubygems"
 require "highline/import"
 
 pass = ask("Enter your password:  ") { |q| q.echo = false }
 puts "Your password is #{pass}!"
-
